homelab-okd/apps/aram-machine/pgsql-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: postgresql
  namespace: aram-machine
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    name: postgresql
status:
  loadBalancer: {}
