homelab-okd/apps/aram-machine/aram-api-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: aram-api
  namespace: aram-machine
  labels:
    app: aram-api
    app.kubernetes.io/component: aram-api
    app.kubernetes.io/instance: aram-api
    app.kubernetes.io/name: aram-api
    app.kubernetes.io/part-of: aram-machine-backend
    app.openshift.io/runtime: nodejs
    app.openshift.io/runtime-version: 16-ubi8
  annotations:
    openshift.io/host.generated: 'true'
spec:
  host: aram-api-aram-machine.apps.okd.homie.estate
  to:
    kind: Service
    name: aram-api
    weight: 100
  port:
    targetPort: 3010-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
